--- a/views/viz1.html
+++ b/views/viz1.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
+	<script type="text/javascript" src="js/jquery-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+	<script type="text/javascript" src="js/main.js"> </script>
 	<script type="text/javascript" src="js/visualization.js"> </script>
 </body>
 </html>
