--- a/views/viz1.html
+++ b/views/viz1.html
@@ -3,27 +3,23 @@
 <head>
 	<title>SEGUE</title>
 	<meta charset="utf-8">
-	<style>
-	.node circle {
-	  fill: #fff;
-	  stroke: #FFEC00;
-	  stroke-width: 3px;
-	}
-
-	.node text { font: 12px sans-serif; }
-
-	.link {
-	  fill: none;
-	  stroke: #ccc;
-	  stroke-width: 2px;
-	}
-	</style>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+	<main>
+		<section id="viz">
+		</section>
+		<section id="article">
+			<div id="title"></div>
+			<div id="description"></div>
+		</section>
+	</main>
+
 	<script type="text/javascript" src="js/jquery-min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 	<script type="text/javascript" src="js/main.js"> </script>
-	<script type="text/javascript" src="js/visualization.js"> </script>
+
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+	<script type="text/javascript" src="js/visualization.js"> </script>-->
 </body>
 </html>
